--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <i class="fa fa-close" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html">Forside</a></li>
-                    <li><a href="about.html">Produkter</a></li>
-                    <li><a href="course.html">Om os</a></li>
-                    <li><a href="contact.html">Kontakt</a></li>
+                    <li><a href="produkter.html">Produkter</a></li>
+                    <li><a href="hvem-er-vi.html">Om os</a></li>
+                    <li><a href="kontakt.html">Kontakt</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
