--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
 <section class="footer">
         <h4>Om Os</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque aliquet turpis nulla, eleifend faucibus est<br>sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus.</p>
+        <p class="pfooter">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque aliquet turpis nulla, eleifend faucibus est<br>sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus.</p>
         <div class="icons">
             <a href="https://www.facebook.com/?stype=lo&deoia=1&jlou=Afc21t7a0IqsOM61QRy2-YvPnPL1nW6h1z9CoNvyd9YaPK0fe97e6TexKooaXoyMv2l0pVPLRdhvQrvJ2KXZg-o6IHxjbfk712J3idRmaUZc5g&smuh=2369&lh=Ac8sbTuWaEpsydlyPVg"><i class="fa fa-facebook"></i></a>
             <a href="https://twitter.com/?lang=da"><i class="fa fa-twitter"></i></a>
