--- a/hvem-er-vi.html
+++ b/hvem-er-vi.html
@@ -12,7 +12,7 @@
     <section class="header">
         
         <nav>
-            <a href="index.html"><img src="img/venus_med_hånd-removebg-preview.png"></a>
+            <a href="index.html"><img class="logo4" src="img/logo4.png"></a>
             <div class="nav-links" id="navLinks">  
                 <i class="fa fa-close" onclick="hideMenu()"></i>
                 <ul>
