--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="header">
         
         <nav>
-            <a href="index.html"><img src=""></a>
+            <a href="index.html"><img class="logo4" src="img/logo4.png"></a>
             <div class="nav-links" id="navLinks">  
                 <i class="fa fa-close" onclick="hideMenu()"></i>
                 <ul>
