--- a/kontakt.html
+++ b/kontakt.html
@@ -11,7 +11,7 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src=""></a>
+            <a href="index.html"><img class="logo4" src="img/logo4.png"></a>
             <div class="nav-links" id="navLinks">  
                 <i class="fa fa-close" onclick="hideMenu()"></i>
                 <ul>
