--- a/kontakt.html
+++ b/kontakt.html
@@ -23,7 +23,7 @@
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-            <h1>Kontakt os</h1>
+            <h1 class="kontakt-os-main">Kontakt os</h1>
     </section>
     
     
