nået til knap vpå forside

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Phoenix Media Forside</title>
 <link rel="stylesheet" href="style.css">
-<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,600,700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
     <section class="header">
@@ -27,7 +29,7 @@
         
         <div class="text-box">
             <h1>Phoenix Media</h1>
-            <p>Elevate Your Brand with Sustainable Creativity<br>– fordi vi tror på, at det er tid til at gøre en forskel, en designoplevelse ad gangen</p>
+            <p>Elevate Your Brand with Sustainable Creativity<br><br>Fordi vi tror på, at det er tid til at gøre en forskel, en designoplevelse ad gangen</p>
             <a href="file:///C:/Users/jnkes/OneDrive/IBA%20Kolding/Projekt%203%20Venus%20media/Venus-Media-sem-2/produkter.html" class="hero-btn">Læs mere her</a>
         </div>
     </section>
