--- a/index.html
+++ b/index.html
@@ -90,18 +90,18 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <div class="row">
                 <div class="projekter-col">
-                    <img src="img/nasa-_SFJhRPzJHs-unsplash (1).jpg">
-                    <h3>Projekt "Vi Voksne" banner</h3>
+                    <img src="img/1709635299655-5b2e475d-a714-4bca-82bf-1f8e216acbe0_1-lærke.jpg">
+                    <h3>"Ziebell Beauty"</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque aliquet turpis nulla.</p>
                 </div>
                 <div class="projekter-col">
-                    <img src="img/nasa-Q1p7bh3SHj8-unsplash (2).jpg">
-                    <h3>Projekt "Optimering af website"</h3>
+                    <img src="img/kevin-bhagat-zNRITe8NPqY-unsplash-energibespar.jpg">
+                    <h3>"Style Spree"</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque aliquet turpis nulla.</p>
                 </div>
                 <div class="projekter-col">
                     <img src="img/nasa-_SFJhRPzJHs-unsplash (1).jpg">
-                    <h3>Projekt "Nå ud til de unge"</h3>
+                    <h3>"NexGen Design"</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque aliquet turpis nulla.</p>
                 </div>
             </div>
