--- a/index.html
+++ b/index.html
@@ -157,8 +157,9 @@
 <!-------- footer ---------->
 
 <section class="footer">
-        <h4>Email: info@phonixmedia.com <br> Åbningstider: Man-Søn fra kl: 9:30 - 15:00</h4>
-        <p class="pfooter">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque aliquet turpis nulla, eleifend faucibus est<br>sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus.</p>
+        <h4>Email: info@phoenixmedia.com <br>Åbningstider: Man-Lør fra kl: 9:30 - 15:00<br>Adresse: Havneparken 1, 6000, Kolding, DK</h4>
+        <p class="pfooter">Tak for at kigge forbi! Find os på de sociale medier @PhoenixMedia og bliv en del af vores kreative rejse.
+        <br> Lad os sammen skabe forandring, én designudfordring af gangen!"</p>
         <div class="icons1">
             <a href="https://www.facebook.com/?stype=lo&deoia=1&jlou=Afc21t7a0IqsOM61QRy2-YvPnPL1nW6h1z9CoNvyd9YaPK0fe97e6TexKooaXoyMv2l0pVPLRdhvQrvJ2KXZg-o6IHxjbfk712J3idRmaUZc5g&smuh=2369&lh=Ac8sbTuWaEpsydlyPVg"><i class="fa fa-facebook"></i></a>
             <a href="https://twitter.com/?lang=da"><i class="fa fa-twitter"></i></a>
@@ -166,7 +167,7 @@
             <a href="https://dk.linkedin.com/"><i class="fa fa-linkedin"></i></a>
             
         </div>
-        <a href="file:///C:/Users/jnkes/OneDrive/IBA%20Kolding/Projekt%203%20Venus%20media/Venus-Media-sem-2/index.html" class="footer-link"><p>Lavet med <i class="fa fa-heart-o"></i> af Venus Media</p></a>
+        <a href="file:///C:/Users/jnkes/OneDrive/IBA%20Kolding/Projekt%203%20Venus%20media/Venus-Media-sem-2/index.html" class="footer-link"><p>Lavet med <i class="fa fa-heart-o"></i> af Phoenix Media</p></a>
 </section>    
   
   
