primært færdig mangler tekst til dels

--- a/kontakt.html
+++ b/kontakt.html
@@ -73,7 +73,7 @@
     
 <!-------- footer ---------->
 <section class="footer">
-    <h4>Email: info@phoenixmedia.com <br>Åbningstider: Man-Lør fra kl: 9:30 - 15:00<br>Adresse: Havneparken 1, 6000, Kolding, DK</h4>
+    <h4><a class="toppen" href="kontakt.html">Tilbage til toppen!</a><br>Email: info@phoenixmedia.com <br>Åbningstider: Man-Lør fra kl: 9:30 - 15:00<br>Adresse: Havneparken 1, 6000, Kolding, DK</h4>
     <p class="pfooter">Tak for at kigge forbi! Find os på de sociale medier @PhoenixMedia og bliv en del af vores kreative rejse.
     <br> Lad os sammen skabe forandring, én designudfordring af gangen!"</p>
     <div class="icons1">
