--- a/kontakt.html
+++ b/kontakt.html
@@ -2,8 +2,11 @@
 <html lang="da">
 
 <head>
+<meta name="description" content="Kontakt Phoenix Media for professionel rådgivning.
+Send os en e-mail eller ring for at komme i kontakt med vores team.
+Du finder vores adresse, telefonnummer og åbningstider her!.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kontakt os side</title>
+<title>Kom i Kontakt med Vores Team hos Phoenix Media</title>
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,600,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> 
@@ -83,7 +86,7 @@
         <a href="https://dk.linkedin.com/"><i class="fa fa-linkedin"></i></a>
         
     </div>
-    <a href="file:///C:/Users/jnkes/OneDrive/IBA%20Kolding/Projekt%203%20Venus%20media/Venus-Media-sem-2/index.html" class="footer-link"><p>Lavet med <i class="fa fa-heart-o"></i> af Phoenix Media</p></a>
+    <a href="index.html" class="footer-link"><p>Lavet med <i class="fa fa-heart-o"></i> af Phoenix Media</p></a>
 </section>     
   
   
