--- a/produkter.html
+++ b/produkter.html
@@ -34,22 +34,36 @@ Phoenix Medias eksperter står klar til at hjælpe dig med at skabe en unik og e
         <div class="row-om-os1">
             <a id="mf"><div class="os-side-col">
                 <h2 class="os-side">Kreativ grafisk design</h2>
-                <p class="os-side-pp">Phoenix Media er ikke bare endnu en digital bureau. Vi er et passioneret hold af kreative sjæle og digitale pionerer, der brænder for at skabe en positiv forandring gennem vores arbejde. 
-                    Vi tror på at forene kreativitet og bæredygtighed for at forme en bedre digital fremtid. Med vores dygtige team af eksperter og vores innovative tilgang til digital innovation, er 
-                    vi dedikerede til at levere skræddersyede løsninger, der ikke kun imødekommer vores kunders behov, men også gør en forskel for vores planet. Hos Phoenix Media er vi ikke bare et bureau 
-                    vi er dine partnere i at skabe en digital fremtid, der er både smuk og bæredygtig.</p>
+                <p class="os-side-pp">Vores kreative grafiske designer er her for at hjælpe
+                     din virksomhed med at skille sig ud i mængden. Vi tilbyder en bred vifte af designløsninger med 
+                     energivenlige praksisser indarbejdet, herunder logoer, grafik, 
+                     illustrationer og branding, der er skræddersyet til at matche din virksomheds identitet 
+                     og budskab. Vores erfarne designere arbejder tæt sammen med dig for at forstå dine behov 
+                     og visioner og omsætte dem til kreative og effektive designløsninger. Med vores ekspertise 
+                     og kreative tilgang kan vi hjælpe dig med at skabe et stærkt visuelt brand, der skiller sig 
+                     ud og efterlader et varigt indtryk på dine kunder.</p>
             </div></a>
             <a id="web"><div class="os-side-col">
                 <h2 class="os-side">Energivenlig webudvikling</h2>
-                <p class="os-side-pp">Vi stræber efter at være frontløbere inden for skræddersyet webdesign og grafiske løsninger, der forener kreativitet, funktionalitet 
-                    og bæredygtighed. Vores mission er at levere skræddersyede digitale løsninger, 
-                    der opfylder vores kunders behov og integrerer bæredygtige praksisser.</p>
+                <p class="os-side-pp">Vores miljøvenlige webudviklingsløsninger er designet til at 
+                    hjælpe din virksomhed med at reducere sit energiforbrug, 
+                    samtidig med at den opnår en stærk og effektiv online tilstedeværelse. Vi tilbyder 
+                    skræddersyede webudviklingsløsninger, der integrerer bæredygtige teknologier og praksisser 
+                    for at optimere din hjemmesides ydeevne og reducere dens miljømæssige fodaftryk. Vores erfarne 
+                    udviklere arbejder tæt sammen med dig for at identificere de bedste løsninger til din 
+                    virksomheds behov og implementere dem på en effektiv og professionel måde. 
+                    Med vores ekspertise og engagement i bæredygtighed kan vi hjælpe din virksomhed 
+                    med at opnå sine miljømæssige og forretningsmæssige mål.</p>
             </div></a>
             <a id="råd"><div class="os-side-col">
                 <h2 class="os-side">Professionel rådgivning</h2>
-                <p class="os-side-pp">Vi stræber efter at være frontløbere inden for skræddersyet webdesign og grafiske løsninger, der forener kreativitet, funktionalitet 
-                    og bæredygtighed. Vores mission er at levere skræddersyede digitale løsninger, 
-                    der opfylder vores kunders behov og integrerer bæredygtige praksisser.</p>
+                <p class="os-side-pp">Vores professionelle rådgivning inden for digital markedsføring
+                     og kundesegmentering er designet til at hjælpe din virksomhed med at opnå sine mål og maksimere 
+                     sin online tilstedeværelse på en mere bæredygtig måde. Vi tilbyder skræddersyede strategier og løsninger, der er baseret på 
+                     en dyb forståelse af din målgruppe og det marked du befinder dig på, hvilket sikrer, at de marketingindsatser vi laver er effektive 
+                     og målrettede. Vores erfarne eksperter samarbejder tæt med dig for at identificere dine behov og mål og 
+                     udvikle en skræddersyet plan, der passer til din virksomheds unikke situation. Med vores ekspertise og 
+                     vejledning kan du optimere din markedsføringsindsats og opnå en stærkere position i markedet. Vi står klar til at hjælpe med store og små opgaver!</p>
             </div></a>
         </div>
     </section>
